Issue #45: top menu remove on mobile

--- a/sites/all/themes/slac/css/styles.css
+++ b/sites/all/themes/slac/css/styles.css
@@ -1006,7 +1006,7 @@ ol.search-results .search-snippet strong { font-weight: bold; color: #871628; }
 .page-basic-io .panel-panel.content .pane-menu-tree > div .menu li a { font-size: 14px; line-height: 20px; padding: 12px 12px 12px 16px; border-bottom: 1px #b5b5b5 solid; }
 .page-basic-io .panel-panel.content .pane-menu-tree > div .menu li a:hover { background: #eaeef0; }
 .page-basic-io .top-menu { background: rgba(67, 121, 142, 0.4); }
-@media (max-width: 690px) { .page-basic-io .top-menu { display: none; } }
+@media (max-width: 640px) { .page-basic-io .top-menu { display: none; } }
 .page-basic-io .top-menu ul.menu { float: right; }
 .page-basic-io .top-menu ul.menu li { list-style-type: none; list-style-image: none; float: left; }
 @media (min-width: 690px) { .page-basic-io .top-menu ul.menu li { border-right: 1px solid white; }
